--- a/Seance13/seance.ipynb
+++ b/Seance13/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eleven-night",
+   "id": "biblical-devon",
    "metadata": {},
    "source": [
     "# Programmation linéaire"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contained-permit",
+   "id": "impressed-entrance",
    "metadata": {},
    "source": [
     "## Flot Maximal"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acting-acrobat",
+   "id": "english-sequence",
    "metadata": {},
    "source": [
     "<img src=\"./elementaire.svg\" width=\"600\">"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressed-combine",
+   "id": "alike-salem",
    "metadata": {},
    "source": [
     "**VARIABLES**\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blond-disability",
+   "id": "frequent-lemon",
    "metadata": {},
    "source": [
     "**CONTRAINTES ARRETES**\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affiliated-description",
+   "id": "failing-listening",
    "metadata": {},
    "source": [
     "**CONTRAINTES NOEUDS** sauf à la source $A$, et au puit $D$\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seeing-dispatch",
+   "id": "saving-laptop",
    "metadata": {},
    "source": [
     "**OBJECTIF**\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endangered-appendix",
+   "id": "antique-marble",
    "metadata": {},
    "source": [
     "**REMARQUE** \n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optional-mediterranean",
+   "id": "fossil-generation",
    "metadata": {},
    "source": [
     "**CALCUL EQUIVALENCE**\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decent-rates",
+   "id": "yellow-network",
    "metadata": {},
    "source": [
     "**ETAPE 1** on ajoute toutes les égalités aux noeuds.\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acute-taxation",
+   "id": "needed-profile",
    "metadata": {},
    "source": [
     "## Reformulation\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "atomic-identity",
+   "id": "colored-carrier",
    "metadata": {},
    "source": [
     "## Résolution avec `scipy`"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "affiliated-steering",
+   "id": "neural-handling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "objective-department",
+   "id": "structural-identifier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secondary-celtic",
+   "id": "powerful-blade",
    "metadata": {},
    "source": [
     "### Exercice\n",
@@ -202,6 +202,307 @@
     "\n",
     "Résolvez les programmes linéaires ci-dessus avec `linprog`.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "optimum-partner",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  0,  0,  0,  0,  0,  0])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = np.array([-1, 0, 0, 0, 0, 0, 0])\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "former-baseball",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 0, -1,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0, -1,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0, -1,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0, -1,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0, -1,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0, -1],\n",
+       "       [ 0,  1,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  1,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  1,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  1,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  1,  0]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_ub = np.matrix(\"\"\"\n",
+    "-1 0 0 0 0 0 0;\n",
+    "0 -1 0 0 0 0 0;\n",
+    "0 0 -1 0 0 0 0;\n",
+    "0 0 0 -1 0 0 0;\n",
+    "0 0 0 0 -1 0 0;\n",
+    "0 0 0 0 0 -1 0;\n",
+    "0 0 0 0 0 0 -1;\n",
+    "0 1 0 0 0 0 0;\n",
+    "0 0 1 0 0 0 0;\n",
+    "0 0 0 1 0 0 0;\n",
+    "0 0 0 0 1 0 0;\n",
+    "0 0 0 0 0 1 0\n",
+    "\"\"\")\n",
+    "A_ub = np.array(A_ub)\n",
+    "A_ub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "wanted-thomas",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12, 7)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_ub.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "retained-trance",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 4, 5, 5, 2, 4])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_ub = np.array([0, 0, 0, 0, 0, 0, 0, 4, 5, 5, 2, 4])\n",
+    "b_ub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "related-crack",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1, -1, -1,  0,  0,  0,  0],\n",
+       "       [ 0,  1,  0, -1,  1,  0,  0],\n",
+       "       [ 0,  0,  1,  0, -1, -1,  0],\n",
+       "       [ 0,  0,  0,  1,  0,  1, -1]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_eq = np.matrix(\"\"\"\n",
+    "1 -1 -1 0 0 0 0;\n",
+    "0 1 0 -1 1 0 0;\n",
+    "0 0 1 0 -1 -1 0;\n",
+    "0 0 0 1 0 1 -1\n",
+    "\"\"\")\n",
+    "A_eq = np.array(A_eq)\n",
+    "A_eq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "becoming-remark",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_eq = np.array(4 * [0])\n",
+    "b_eq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "visible-chick",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     con: array([ 3.92486044e-12, -3.82782694e-12,  4.02966549e-12, -3.95417032e-12])\n",
+      "     fun: -8.999999999912182\n",
+      " message: 'Optimization terminated successfully.'\n",
+      "     nit: 5\n",
+      "   slack: array([9.00000000e+00, 4.00000000e+00, 5.00000000e+00, 5.00000000e+00,\n",
+      "       1.00000000e+00, 4.00000000e+00, 9.00000000e+00, 2.61133337e-11,\n",
+      "       5.77795589e-11, 5.76498849e-11, 1.00000000e+00, 2.60409472e-11])\n",
+      "  status: 0\n",
+      " success: True\n",
+      "       x: array([9., 4., 5., 5., 1., 4., 9.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "solution = linprog(c=c, A_eq=A_eq, b_eq=b_eq, A_ub=A_ub, b_ub=b_ub)\n",
+    "print(solution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "australian-diana",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     con: array([0., 0., 0., 0.])\n",
+       "     fun: -9.0\n",
+       " message: 'Optimization terminated successfully.'\n",
+       "     nit: 9\n",
+       "   slack: array([9., 4., 5., 5., 1., 4., 9., 0., 0., 0., 1., 0.])\n",
+       "  status: 0\n",
+       " success: True\n",
+       "       x: array([9., 4., 5., 5., 1., 4., 9.])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linprog(c=c, A_eq=A_eq, b_eq=b_eq, A_ub=A_ub, b_ub=b_ub, method=\"simplex\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "christian-venice",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "           con: array([0., 0., 0., 0.])\n",
+       " crossover_nit: 0\n",
+       "           fun: -9.0\n",
+       "       message: 'Optimization terminated successfully.'\n",
+       "           nit: 3\n",
+       "         slack: array([9., 4., 5., 5., 1., 4., 9., 0., 0., 0., 1., 0.])\n",
+       "        status: 0\n",
+       "       success: True\n",
+       "             x: array([9., 4., 5., 5., 1., 4., 9.])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linprog(c=c, A_eq=A_eq, b_eq=b_eq, A_ub=A_ub, b_ub=b_ub, method=\"highs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "monthly-world",
+   "metadata": {},
+   "source": [
+    "**REMARQUE** \n",
+    "\n",
+    "le simplexe est présent pour des raisons historiques, on préférera les autres solvers en particulier les `highs` récents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "external-agency",
+   "metadata": {},
+   "source": [
+    "**REMARQUE**\n",
+    "\n",
+    "- On rentre manuellement les matrices ce qui peut être source d'erreur vue la quantité de coefficients.\n",
+    "- La modélisation est faite manuellement.\n",
+    "- De plus on ne peut résoudre que des problèmes linéaires en variable continue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "computational-tamil",
+   "metadata": {},
+   "source": [
+    "## Exemple cas entier\n",
+    "\n",
+    "on cherche à maximiser $4x-3y$ sous les contraintes\n",
+    "\n",
+    "\\begin{align}\n",
+    "0\\leq x\\\\\n",
+    "0\\leq y\\\\\n",
+    "2x+y\\leq2\\\\\n",
+    "x+2y\\leq 2\\\\\n",
+    "\\end{align}\n",
+    "avec $x$ et $y$ des entiers.\n",
+    "\n",
+    "### Exercice 10min -> 11h30\n",
+    "\n",
+    "1. Essayer d'utiliser `linprog`.\n",
+    "2. Dessiner le domaine de maximisation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "supreme-attendance",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
