--- a/Seance14/seance.ipynb
+++ b/Seance14/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "statutory-cornell",
+   "id": "breeding-symbol",
    "metadata": {},
    "source": [
     "# Ordonnancement"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adult-production",
+   "id": "considerable-courage",
    "metadata": {},
    "source": [
     "## Cahier des charges de l'exemple principal\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "geological-light",
+   "id": "medieval-onion",
    "metadata": {},
    "source": [
     "**OBJECTIF** assembler un emploi du temps des tâches tel que\n",
@@ -37,6 +37,27 @@
     "- à part cela on peut effectuer des tâches en parallèle\n",
     "- on veut que la totalité des tâches soient réalisé en le minimum de temps."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ongoing-trace",
+   "metadata": {},
+   "source": [
+    "## Exercice\n",
+    "\n",
+    "10min -> 10h30\n",
+    "\n",
+    "- Essayer d'organiser un planning.\n",
+    "- Trouver un graphe sous jacent au problème."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "useful-trainer",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
