--- a/Seance14/seance.ipynb
+++ b/Seance14/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "breeding-symbol",
+   "id": "historical-netscape",
    "metadata": {},
    "source": [
     "# Ordonnancement"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "considerable-courage",
+   "id": "suitable-monitoring",
    "metadata": {},
    "source": [
     "## Cahier des charges de l'exemple principal\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medieval-onion",
+   "id": "sized-disposal",
    "metadata": {},
    "source": [
     "**OBJECTIF** assembler un emploi du temps des tâches tel que\n",
@@ -40,21 +40,63 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-trace",
+   "id": "spoken-treasurer",
    "metadata": {},
    "source": [
     "## Exercice\n",
     "\n",
     "10min -> 10h30\n",
     "\n",
-    "- Essayer d'organiser un planning.\n",
-    "- Trouver un graphe sous jacent au problème."
+    "1. Essayer d'organiser un planning.\n",
+    "2. Trouver un graphe sous jacent au problème."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "interim-papua",
+   "metadata": {},
+   "source": [
+    "1. On remarque que les tâches sont rangés dans l'odre alphabétique et que les prérequis sont toujours précédent dans l'alphabet. \n",
+    "On peut donc constater que l'enchainement\n",
+    "\n",
+    "A - B - C - D - E - F - G - H\n",
+    "\n",
+    "est valide.\n",
+    "\n",
+    "Il est clair que la durée $18$ n'est pas optimale.\n",
+    "\n",
+    "On peut déjà clairement faire tourner A, B et C en parallèle au démarrage.\n",
+    "\n",
+    "**REMARQUE** quel représentation graphique peut-on utiliser pour représenter un emploi du temps?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "lesser-disorder",
+   "metadata": {},
+   "source": [
+    "2. On peut d'abord organiser un graphe de la façon suivante.\n",
+    "\n",
+    "- Les sommets seront les tâches.\n",
+    "- Une arrête relie $\\alpha$ à $\\beta$ lorsque $\\alpha$ est un prérequis de $\\beta$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "charming-farming",
+   "metadata": {},
+   "source": [
+    "# Exercice\n",
+    "\n",
+    "5min -> 10h45\n",
+    "\n",
+    "Construisez le graphe orienté correspondant au cahier des charges ci-dessus."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "useful-trainer",
+   "id": "rough-delight",
    "metadata": {},
    "outputs": [],
    "source": []
