--- a/Seance14/seance.ipynb
+++ b/Seance14/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "entertaining-syndicate",
+   "id": "rental-circular",
    "metadata": {},
    "source": [
     "# Ordonnancement"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "logical-manner",
+   "id": "answering-cisco",
    "metadata": {},
    "source": [
     "## Cahier des charges de l'exemple principal\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "buried-nowhere",
+   "id": "surface-student",
    "metadata": {},
    "source": [
     "**OBJECTIF** assembler un emploi du temps des tâches tel que\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thick-meeting",
+   "id": "handy-democracy",
    "metadata": {},
    "source": [
     "## Exercice\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "focal-yorkshire",
+   "id": "material-passport",
    "metadata": {},
    "source": [
     "1. On remarque que les tâches sont rangés dans l'odre alphabétique et que les prérequis sont toujours précédent dans l'alphabet. \n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "commercial-confidence",
+   "id": "cutting-segment",
    "metadata": {},
    "source": [
     "2. On peut d'abord organiser un graphe de la façon suivante.\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "preliminary-hospital",
+   "id": "genuine-rouge",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "knowing-costa",
+   "id": "rural-joint",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "satisfactory-display",
+   "id": "hybrid-manufacturer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "early-responsibility",
+   "id": "satisfactory-scout",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "electoral-concern",
+   "id": "aggressive-compiler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "coupled-decision",
+   "id": "sporting-spending",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ongoing-namibia",
+   "id": "chemical-bulgarian",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "reliable-relevance",
+   "id": "wired-liabilities",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "express-integration",
+   "id": "political-floor",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "exceptional-groove",
+   "id": "immediate-right",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "infectious-sandwich",
+   "id": "valued-terminal",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "metric-assistant",
+   "id": "incorporated-realtor",
    "metadata": {},
    "source": [
     "Une arrête représente aussi la relation transitive \"être complété avant\". \n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coral-taxation",
+   "id": "different-housing",
    "metadata": {},
    "source": [
     "**DEFINITIONS**\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moderate-metropolitan",
+   "id": "determined-corpus",
    "metadata": {},
    "source": [
     "**THEOREME** Un cahier des charges est réalisable si et seulement si son graphe associé est un **DAG**."
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swedish-weapon",
+   "id": "collaborative-moderator",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -340,8 +340,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "regular-papua",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.algorithms.dag.is_directed_acyclic_graph(cahier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "designing-story",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.algorithms.dag.is_directed_acyclic_graph(cahier_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "modern-mathematics",
+   "metadata": {},
+   "source": [
+    "**REMARQUE** pour inclure les durées dans un graphe, on va pondérer l'arrête $(\\alpha, \\beta)$ par la durée de la tâche $\\alpha$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "stretch-agriculture",
+   "metadata": {},
+   "source": [
+    "# Exercice\n",
+    "\n",
+    "5 min -> 11h25\n",
+    "\n",
+    "Compléter le graphe associé au premier cahier des charges."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "shaped-organization",
+   "id": "silent-superintendent",
    "metadata": {},
    "outputs": [],
    "source": []
