--- a/Seance14/seance.ipynb
+++ b/Seance14/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "important-latex",
+   "id": "inclusive-samoa",
    "metadata": {},
    "source": [
     "# Ordonnancement"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outstanding-quality",
+   "id": "brilliant-optimum",
    "metadata": {},
    "source": [
     "## Cahier des charges de l'exemple principal\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elementary-liability",
+   "id": "accompanied-scale",
    "metadata": {},
    "source": [
     "**OBJECTIF** assembler un emploi du temps des tâches tel que\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-video",
+   "id": "furnished-dodge",
    "metadata": {},
    "source": [
     "## Exercice\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "political-afghanistan",
+   "id": "varying-illness",
    "metadata": {},
    "source": [
     "1. On remarque que les tâches sont rangés dans l'odre alphabétique et que les prérequis sont toujours précédent dans l'alphabet. \n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minor-governor",
+   "id": "executed-concrete",
    "metadata": {},
    "source": [
     "2. On peut d'abord organiser un graphe de la façon suivante.\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hundred-woman",
+   "id": "christian-sodium",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bacterial-energy",
+   "id": "dress-domain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "controlled-universe",
+   "id": "musical-facility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "sharing-india",
+   "id": "experienced-excitement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "thermal-adams",
+   "id": "naked-frequency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "owned-tender",
+   "id": "continuous-parallel",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "sophisticated-williams",
+   "id": "forty-audit",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "intimate-organic",
+   "id": "eligible-blank",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "noted-portal",
+   "id": "palestinian-automation",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "african-stretch",
+   "id": "emerging-diesel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "finnish-feedback",
+   "id": "structural-russian",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "upper-harbor",
+   "id": "powered-fiction",
    "metadata": {},
    "source": [
     "Une arrête représente aussi la relation transitive \"être complété avant\". \n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quiet-creek",
+   "id": "unexpected-round",
    "metadata": {},
    "source": [
     "**DEFINITIONS**\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "editorial-gospel",
+   "id": "narrow-moldova",
    "metadata": {},
    "source": [
     "**THEOREME** Un cahier des charges est réalisable si et seulement si son graphe associé est un **DAG**."
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "active-verification",
+   "id": "recorded-selling",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bacterial-withdrawal",
+   "id": "received-savannah",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "clear-junction",
+   "id": "appointed-stockholm",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-scanning",
+   "id": "sudden-sydney",
    "metadata": {},
    "source": [
     "**REMARQUE** pour inclure les durées dans un graphe, on va pondérer l'arrête $(\\alpha, \\beta)$ par la durée de la tâche $\\alpha$."
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simplified-theater",
+   "id": "scenic-platinum",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ruled-revision",
+   "id": "behavioral-shock",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "excellent-enhancement",
+   "id": "alternative-standard",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indie-repository",
+   "id": "subtle-stocks",
    "metadata": {},
    "source": [
     "**REMARQUE** comme $H$ n'était requis pour aucune autre tâche on n'a pas pu inclure sa durée dans le graphe ci-dessus!"
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heated-dylan",
+   "id": "equipped-creation",
    "metadata": {},
    "source": [
     "**REMARQUE** pour résoudre ce problème on va rajouter un sommet artificiel $FIN$ qui marque la fin d'un emploi tu temps.\n",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excess-theater",
+   "id": "governmental-contents",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "special-suffering",
+   "id": "paperback-surname",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "molecular-straight",
+   "id": "fiscal-petite",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "single-quest",
+   "id": "attempted-project",
    "metadata": {},
    "source": [
     "**THEOREME** la durée de l'emploi du temps optimal correspond à la longueur (au sens pondération) du plus long  chemin dans le graphe associé."
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "absent-anderson",
+   "id": "weird-jungle",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -565,8 +565,207 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "executed-military",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'D', 'F', 'H', 'Fin']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.algorithms.dag.dag_longest_path(G=cahier, weight=\"duree\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "colonial-export",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.algorithms.dag.dag_longest_path_length(G=cahier, weight=\"duree\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "requested-blade",
+   "metadata": {},
+   "source": [
+    "# Résolution manuelle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "traditional-zealand",
+   "metadata": {},
+   "source": [
+    "Tâche   | Début | Fin\n",
+    "-----:  |:-----:|:---------\n",
+    "A       |  0    | 2\n",
+    "B       |  0    | 1\n",
+    "C       |  0    | 3\n",
+    "D       |  2    | 6\n",
+    "E       |  3    | 4\n",
+    "F       |  6    | 8\n",
+    "G       |  4    | 7\n",
+    "H       |  8    | 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "divine-gender",
+   "metadata": {},
+   "source": [
+    "On a pu remplir dans l'ordre alphabétique, car les prérequis respectent cet ordre.\n",
+    "\n",
+    "Et à chaque nouvelle tâche on la fait commencé au moment où le dernier (au sens de la colonne Fin) prérequis se termine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "federal-convention",
+   "metadata": {},
+   "source": [
+    "**REMARQUE** la cohérence de l'ordre alphabétique avec la relation de prérequis était cruciale pour la résolution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "frequent-piano",
+   "metadata": {},
+   "source": [
+    "# Exercice\n",
+    "\n",
+    "10 min -> 12h\n",
+    "\n",
+    "1. Trouver une fonction dans `networkx.algorithms.dag` qui permette de déterminer un tel ordre.\n",
+    "2. Utilisez là pour résoudre le problème associé au cahier des charges ci-dessous.\n",
+    "3. Créez des classes `Cahier_des_charges` et `Emploi_du_temps` ainsi qu'une fonction `genere_emploi_du_temps_optimal` permettant de résoudre le problème automatiquement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ongoing-calculation",
+   "metadata": {},
+   "source": [
+    "Tâche   | Durée | Prérequis\n",
+    "-----:  |:-----:|:---------\n",
+    "A       |  1.5  | F\n",
+    "B       |  3    | I\n",
+    "C       |  4    | F, I\n",
+    "D       |  1    | A, G, F\n",
+    "E       |  6    | A, B\n",
+    "F       |  2    | \n",
+    "G       |  4.5  | B, C, F\n",
+    "H       |  0.5  | A, I, J\n",
+    "I       |  3    |\n",
+    "J       |  4    | D, G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "healthy-nicholas",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C', 'B', 'E', 'A', 'G', 'D', 'F', 'H', 'Fin']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(nx.algorithms.dag.topological_sort(cahier))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "surprising-cornwall",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['C', 'B', 'E', 'A', 'G', 'D', 'F', 'H', 'Fin'],\n",
+       " ['C', 'B', 'E', 'A', 'D', 'F', 'G', 'H', 'Fin'],\n",
+       " ['C', 'B', 'E', 'A', 'D', 'G', 'F', 'H', 'Fin'],\n",
+       " ['C', 'B', 'A', 'D', 'E', 'G', 'F', 'H', 'Fin'],\n",
+       " ['C', 'B', 'A', 'D', 'E', 'F', 'G', 'H', 'Fin'],\n",
+       " ['C', 'B', 'A', 'E', 'G', 'D', 'F', 'H', 'Fin'],\n",
+       " ['C', 'B', 'A', 'E', 'D', 'F', 'G', 'H', 'Fin'],\n",
+       " ['C', 'B', 'A', 'E', 'D', 'G', 'F', 'H', 'Fin'],\n",
+       " ['C', 'A', 'B', 'E', 'G', 'D', 'F', 'H', 'Fin'],\n",
+       " ['C', 'A', 'B', 'E', 'D', 'F', 'G', 'H', 'Fin'],\n",
+       " ['C', 'A', 'B', 'E', 'D', 'G', 'F', 'H', 'Fin'],\n",
+       " ['C', 'A', 'B', 'D', 'E', 'G', 'F', 'H', 'Fin'],\n",
+       " ['C', 'A', 'B', 'D', 'E', 'F', 'G', 'H', 'Fin'],\n",
+       " ['B', 'A', 'D', 'C', 'E', 'G', 'F', 'H', 'Fin'],\n",
+       " ['B', 'A', 'D', 'C', 'E', 'F', 'G', 'H', 'Fin'],\n",
+       " ['B', 'A', 'C', 'E', 'G', 'D', 'F', 'H', 'Fin'],\n",
+       " ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'H', 'Fin'],\n",
+       " ['B', 'A', 'C', 'E', 'D', 'G', 'F', 'H', 'Fin'],\n",
+       " ['B', 'A', 'C', 'D', 'E', 'G', 'F', 'H', 'Fin'],\n",
+       " ['B', 'A', 'C', 'D', 'E', 'F', 'G', 'H', 'Fin'],\n",
+       " ['B', 'C', 'E', 'A', 'G', 'D', 'F', 'H', 'Fin'],\n",
+       " ['B', 'C', 'E', 'A', 'D', 'F', 'G', 'H', 'Fin'],\n",
+       " ['B', 'C', 'E', 'A', 'D', 'G', 'F', 'H', 'Fin'],\n",
+       " ['B', 'C', 'A', 'D', 'E', 'G', 'F', 'H', 'Fin'],\n",
+       " ['B', 'C', 'A', 'D', 'E', 'F', 'G', 'H', 'Fin'],\n",
+       " ['B', 'C', 'A', 'E', 'G', 'D', 'F', 'H', 'Fin'],\n",
+       " ['B', 'C', 'A', 'E', 'D', 'F', 'G', 'H', 'Fin'],\n",
+       " ['B', 'C', 'A', 'E', 'D', 'G', 'F', 'H', 'Fin'],\n",
+       " ['A', 'C', 'B', 'E', 'G', 'D', 'F', 'H', 'Fin'],\n",
+       " ['A', 'C', 'B', 'E', 'D', 'F', 'G', 'H', 'Fin'],\n",
+       " ['A', 'C', 'B', 'E', 'D', 'G', 'F', 'H', 'Fin'],\n",
+       " ['A', 'C', 'B', 'D', 'E', 'G', 'F', 'H', 'Fin'],\n",
+       " ['A', 'C', 'B', 'D', 'E', 'F', 'G', 'H', 'Fin'],\n",
+       " ['A', 'B', 'D', 'C', 'E', 'G', 'F', 'H', 'Fin'],\n",
+       " ['A', 'B', 'D', 'C', 'E', 'F', 'G', 'H', 'Fin'],\n",
+       " ['A', 'B', 'C', 'E', 'G', 'D', 'F', 'H', 'Fin'],\n",
+       " ['A', 'B', 'C', 'E', 'D', 'F', 'G', 'H', 'Fin'],\n",
+       " ['A', 'B', 'C', 'E', 'D', 'G', 'F', 'H', 'Fin'],\n",
+       " ['A', 'B', 'C', 'D', 'E', 'G', 'F', 'H', 'Fin'],\n",
+       " ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'Fin']]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(nx.algorithms.dag.all_topological_sorts(cahier))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "positive-venue",
+   "id": "manual-michael",
    "metadata": {},
    "outputs": [],
    "source": []
